[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "tucker12345",email = "takashi.canada.toronto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pyspark (>=3.5.4,<4.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-xdist (>=3.6.1,<4.0.0)",
    "ruff (>=0.9.4,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
indent-width = 4
#target-version = "py39"
exclude = []

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101", #Use of assert
    "PLR2004", #Use of constant variable
    "D203", #incorrect-blank-line-before-class
    "D213", #multi-line-summary-first-line
    "COM812", #missing-trailing-comma
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = true
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"